syntax = "proto3";

package comment;

option go_package = "pb";

service CommentServiceExt {
  // 精彩影评
  rpc HotComment(HotCommentReq) returns(HotCommentRsp) {}
  // 进行评论
  rpc MakeComment(MakeCommentReq) returns(MakeCommentRsp) {}
  // 评论up
  rpc UpNumComment(UpNumCommentReq) returns(UpNumCommentRsp){}
  // 我的评论
  rpc MyComments(MyCommentsReq) returns(MyCommentsRsp){}
  // 删除评论
  rpc DeleteComment(DeleteCommentReq) returns(DeleteCommentRsp){}
}

message HotCommentReq {
  int64 movieId = 2 ;
}

message HotCommentRsp {
  CommentData data = 1 ;
}

message CommentData {
  CommentMini mini = 1 ;
  CommentPlus plus = 2 ;
}

message CommentMini {
  repeated CommentRecord list = 1 ;
  int64 total = 2 ;
}

message CommentPlus {
  repeated CommentRecord list = 1 ;
  int64 total = 2 ;
}

message CommentRecord {
  string title = 1 ;
  string content = 2 ;
  string headImg = 3 ;
  string nickname = 4 ;
  string createAt = 5;
  int64 upNum = 6;
  int64 commentID = 7;
}

message MakeCommentReq {
  int64 movieId = 1 ; // 影片id
  string title = 2 ; // 标题
  string headImg = 3 ;
  string nickname = 4 ; // 用户昵称
  int64 userId = 5 ; // 用户id
  string content = 6 ;
}

message MakeCommentRsp {
}

message UpNumCommentReq {
  int64 commentID = 1;
}

message UpNumCommentRsp {
  int64 upNum = 1;
}

message MyCommentsReq{
  int64 userId = 1;
}

message MyCommentsRsp{
  repeated MyComment myComments = 1;
}

message MyComment{
  string filmImage = 1;
  string filmName = 2;
  string score = 3;
  int64 commentID = 4;
  string content = 5;
  int64 upNum = 6;
}

message DeleteCommentReq{
  int64 commentID = 1;
}

message DeleteCommentRsp{

}

message Movie{
  string img = 1;
  int64 movieId = 2;
  string titleCn = 3;
  string moviesSupportType = 4;
  string filmDirector = 5;
  string actors = 6;
  string filmDrama = 7;
  float ratingFinal = 8;
}

message HotMovie {
  repeated string actorName = 1 ; // 演员名字
  string commonSpecial = 2 ; // 影片简介
  string directorName = 3 ; // 导演名字
  string img = 4 ; // 影片logo
  int64 is3D = 5 ; // 是否3D
  int64 isDMAX = 6 ; // 是否DMAX
  int64 isFilter = 7 ; // 是否过滤
  int64 isHot = 8 ; // 是否热映
  int64 isIMAX = 9 ; // 是否IMAX
  int64 isIMAX3D = 10 ; // 是否IMAX3D
  int64 isNew = 11 ; // 是否新上映
  int64 length = 12 ; // 时长
  int64 movieId = 13 ; // 电影时长
  int64 rDay = 14 ; // 上映日期
  int64 rMonth = 15 ; // 上映月份
  int64 rYear = 16 ; // 上映年份
  float ratingFinal = 17 ; // 最终评分
  string t = 18 ; // 名字
  string titleCn = 19 ; // 中文名字
  string titleEn = 20 ; // 英文名字
  string type = 21 ; // 影片类型
  int64 wantedCount = 22 ; // 想看的人数
}